# Lan-sync

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml
client/: client.py
server/: CMakeLists.txt
server/include/: db_manager.hpp  hash_utils.hpp  server.hpp  storage_manager.hpp
server/src/: db_manager.cpp  hash_utils.cpp  main.cpp  server.cpp  storage_manager.cpp
server/web/: app.js  index.html  style.css
